--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jest-svg-transformer": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
